ECOM-60 documentation for Subcategory\Filters
