# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\SubcategoryController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AccessoryController;
@@ -11,3 +12,5 @@ Route::apiResource('accessories', AccessoryController::class);
 Route::apiResource('categories', CategoryController::class);
 
 Route::apiResource('manufactory', ManufactoryController::class);
+
+Route::apiResource('subcategory', SubcategoryController::class);
